@@ -38,7 +38,8 @@ allprojects {
                 listOf(
                     "-Xlint:all",
                     "-Werror",
-                    "--release", "25"
+                    "--release", "25",
+                    "--enable-preview"
                 )
             )
         }
